Update width of carousel heading on mobile to prevent line breaks.

--- a/public/style.css
+++ b/public/style.css
@@ -240,7 +240,7 @@ main .third-sect .carousel .carousel-icon {
 main .third-sect .carousel .carousel-heading {
   font-size: 6vw;
   grid-row: 1/2;
-  grid-column: 4/12;
+  grid-column: 4/13;
 }
 main .third-sect .carousel .carousel-img {
   width: 90%;
